traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:7: error: not found: value Direction
                                 else {if (getDirection()==Direction.EAST) {setPos(getX(),getY()+1)}
                                                           ^