traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {def positionFinale():Boolean= {if (getX()==getMondeHauteur()-1&&getY()==getMondeLargeur()-1) {return true}
                                                  else {return false}}
 var a:Int = 0;                   
                    def marche() {droite(); while (!positionFinale()) 
                                {ecritMessage(a);a+=1;
                                 if (estFaceMur())
                                 {setPos(getX(),getY()+1);}
                                 else {if (getDirection()==Direction.EAST) {setPos(getX(),getY()+1)}
                                       else {setPos(getX(),getY()-1)}
                                      }
                                 }
                                 }
                                
marche();gauche();gauche();ecritMessage(48);}